--- a/add_new_item_4.html
+++ b/add_new_item_4.html
@@ -20,6 +20,7 @@
           border: 5px solid white;
           background-color: #fff;
         "
+        class="taskspan"
       >
         <h1>Task <span style="color: #00a5ec">Lists</span></h1>
       </div>
@@ -116,24 +117,8 @@
 
       <div
         class="container3"
-        style="
-          display: flex;
-          width: 90px;
-          height: 1px;
-          background-color: #00a5ec;
-          border: 2px solid #00a5ec;
-          justify-content: center;
-          padding: 10px;
-          padding-bottom: 22px;
-          border-radius: 10px;
-
-          position: absolute;
-          left: 270px;
-
-          margin-top: 20px;
-        "
       >
-        <a href="./newtask_2.html" style="text-decoration: none">
+        <a href="./add_new_3.html" style="text-decoration: none">
           <div style="color: white">+ Add Task</div>
         </a>
       </div>
