--- a/index.html
+++ b/index.html
@@ -26,27 +26,57 @@
         border: 5px solid white;
         background-color: #fff;
       "
+      class="taskspan"
     >
-      <h1>Task <span style="color: #00a5ec">Lists</span></h1>
+      <h1 class="h1task">Task <span style="color: #00a5ec">Lists</span></h1>
     </div>
 
     <div class="main_div">
       <div class="new_task">
         <h3>
-          <a href="./newtask_2.html">
+          <a href="./add_new_3.html" class="imgbtn">
             <img src="./pp.png" alt="add" width="40px " height="40px" />
           </a>
           <a
-            href="./newtask_2.html"
+            href="./add_new_3.html"
             style="text-decoration: none; color: black"
+            class="addnewText"
           >
             Add New task
           </a>
         </h3>
       </div>
-      <a href="./add_new_3.html">
+      <div class="ultimate" style="background-color: #ededed">
+        <a href="./newtask_2.html" style="text-decoration: none;">
+          
         <div class="one common">
-          <h3 style="color: #00a5ec">Trip to Paris</h3>
+            <h3 style="color: #00a5ec">Trip to Paris</h3>
+
+            <br />
+            <hr />
+            <br />
+            <input type="checkbox" name="paris" id="paris" checked /><label
+              for="paris"
+              style="
+                text-decoration: line-through;
+                margin-left: 20px;
+                color: #c2c2c2;
+              "
+              >Visit church</label
+            ><br />
+            <br />
+
+            <input type="checkbox" name="paris2" id="paris2" /><label
+              for="paris2"
+              style="margin-left: 20px"
+            >
+              Shopping</label
+            ><br />
+        </div>
+      </a>
+
+        <div class="two common">
+          <h3 style="color: #00a5ec">My To-Do List</h3>
 
           <br />
           <hr />
@@ -58,7 +88,7 @@
               margin-left: 20px;
               color: #c2c2c2;
             "
-            >Visit church</label
+            >Visit Supermarket</label
           ><br />
           <br />
 
@@ -66,110 +96,84 @@
             for="paris2"
             style="margin-left: 20px"
           >
-            Shopping</label
+            Buy Vegetable</label
           ><br />
         </div>
-      </a>
 
-      <div class="two common">
-        <h3 style="color: #00a5ec">My To-Do List</h3>
+        <div class="three common">
+          <h3 style="color: #00a5ec">Movies I will Watch</h3>
 
-        <br />
-        <hr />
-        <br />
-        <input type="checkbox" name="paris" id="paris" checked/><label
-          for="paris"
-          style="
-            text-decoration: line-through;
-            margin-left: 20px;
-            color: #c2c2c2;
-            
-          "
-          >Visit Supermarket</label
-        ><br />
-        <br />
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" checked /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Stranger Things 4</label
+          ><br />
+          <br />
 
-        <input type="checkbox" name="paris2" id="paris2" /><label
-          for="paris2"
-          style="margin-left: 20px"
-        >
-          Buy Vegetable</label
-        ><br />
-      </div>
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Avenger</label
+          ><br />
+        </div>
 
-      <div class="three common">
-        <h3 style="color: #00a5ec">Movies I will Watch</h3>
+        <div class="four common">
+          <h3 style="color: #00a5ec">Daily Morning Routine..</h3>
 
-        <br />
-        <hr />
-        <br />
-        <input type="checkbox" name="paris" id="paris" checked /><label
-          for="paris"
-          style="
-            text-decoration: line-through;
-            margin-left: 20px;
-            color: #c2c2c2;
-          "
-          >Stranger Things 4</label
-        ><br />
-        <br />
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" checked /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Wake up at 6</label
+          ><br />
+          <br />
 
-        <input type="checkbox" name="paris2" id="paris2" /><label
-          for="paris2"
-          style="margin-left: 20px"
-        >
-          Avenger</label
-        ><br />
-      </div>
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Sleep at 10 pm </label
+          ><br />
+        </div>
 
-      <div class="four common">
-        <h3 style="color: #00a5ec">Daily Morning Routine..</h3>
+        <div class="fifth common">
+          <h3 style="color: #00a5ec">Book to Read</h3>
 
-        <br />
-        <hr />
-        <br />
-        <input type="checkbox" name="paris" id="paris" checked/><label
-          for="paris"
-          style="
-            text-decoration: line-through;
-            margin-left: 20px;
-            color: #c2c2c2;
-          "
-          >Wake up at 6</label
-        ><br />
-        <br />
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" checked /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Design of Everyday</label
+          ><br />
+          <br />
 
-        <input type="checkbox" name="paris2" id="paris2" /><label
-          for="paris2"
-          style="margin-left: 20px"
-        >
-          Sleep at 10 pm </label
-        ><br />
-      </div>
-
-      <div class="fifth common">
-        <h3 style="color: #00a5ec">Book to Read</h3>
-
-        <br />
-        <hr />
-        <br />
-        <input type="checkbox" name="paris" id="paris" checked /><label
-          for="paris"
-          style="
-            text-decoration: line-through;
-            margin-left: 20px;
-            color: #c2c2c2;
-          "
-          >Design of Everyday</label
-        ><br />
-        <br />
-
-        <input type="checkbox" name="paris2" id="paris2" /><label
-          for="paris2"
-          style="margin-left: 20px"
-        >
-          Alchemist</label
-        ><br />
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Alchemist</label
+          ><br />
+        </div>
       </div>
     </div>
   </body>
