--- a/newtask_2.html
+++ b/newtask_2.html
@@ -20,8 +20,10 @@
       border: 5px solid white;
       background-color: #fff;
     "
+    class="taskspan"
+
   >
-    <h1>Task <span style="color: #00a5ec">Lists</span></h1>
+    <h1 class="h1task">Task <span style="color: #00a5ec">Lists</span></h1>
   </div>
 
   <div style="background-color: #ededed;
@@ -33,7 +35,7 @@
     >
       <div
         class="backbutton"
-        style="display: flex; margin-left: 380px; margin-top: 90px"
+       
       >
         <a href="./index.html">
           <img src="./ss.png" alt="Back" width="40px " height="40px"
@@ -44,22 +46,21 @@
       </div>
       <div
         class="addnew"
-        style="display: flex; margin-top: 90px; margin-right: 480px"
       >
         <a href="./add_new_item_4.html">
           <img src="./pp.png" alt="add" width="40px " height="40px" />
         </a>
-        <a href="./add_new_item_4.html" style="text-decoration: none; color: black">
+        <a href="./add_new_item_4.html" style="text-decoration: none; color: black" class="addnewText">
           <h3 style="padding-left: 8px">Add New Item</h3>
         </a>
       </div>
     </div>
     <div class="main">
       <div class="container">
-        <h3 style="color: #00a5ec; margin-left: 100px">Trip to paris</h3>
+        <h3 class="h3trip" >Trip to paris</h3>
       </div>
 
-      <div style="margin-left: 100px; margin-top: 30px">
+      <div class="tpstyle" >
         <input type="checkbox" name="paris" id="paris" checked /><label
           for="paris"
           style="
