--- a/add_new_3.html
+++ b/add_new_3.html
@@ -14,164 +14,163 @@
     ></script>
   </head>
   <body>
-
-
-<div style="filter: blur(5px);">
-  <div
-    style="
-      padding: 20px;
-      box-shadow: 5px 5px 5px rgb(149, 114, 199);
-      border: 5px solid white;
-      background-color: #fff;
-    "
-  >
-    <h1>Task <span style="color: #00a5ec">Lists</span></h1>
-  </div>
-
-  <div class="main_div">
-    <div class="new_task">
-      <h3>
-        <a href="./newtask_2.html">
-          <img src="./pp.png" alt="add" width="40px " height="40px" />
-        </a>
-        <a
-          href="./newtask_2.html"
-          style="text-decoration: none; color: black"
-        >
-          Add New task
-        </a>
-      </h3>
-    </div>
-    <a href="./add_new_3.html">
-      <div class="one common">
-        <h3 style="color: #00a5ec">Trip to Paris</h3>
-
-        <br />
-        <hr />
-        <br />
-        <input type="checkbox" name="paris" id="paris" /><label
-          for="paris"
-          style="
-            text-decoration: line-through;
-            margin-left: 20px;
-            color: #c2c2c2;
-          "
-          >Visit church</label
-        ><br />
-        <br />
-
-        <input type="checkbox" name="paris2" id="paris2" /><label
-          for="paris2"
-          style="margin-left: 20px"
-        >
-          Shopping</label
-        ><br />
+    <div style="filter: blur(5px)">
+      <div
+        style="
+          padding: 20px;
+          box-shadow: 5px 5px 5px rgb(149, 114, 199);
+          border: 5px solid white;
+          background-color: #fff;
+        "
+        class="taskspan"
+      >
+        <h1>Task <span style="color: #00a5ec">Lists</span></h1>
       </div>
-    </a>
 
-    <div class="two common">
-      <h3 style="color: #00a5ec">My To-Do List</h3>
+      <div class="main_div">
+        <div class="new_task">
+          <h3>
+            <a href="./newtask_2.html">
+              <img src="./pp.png" alt="add" width="40px " height="40px" />
+            </a>
+            <a
+              href="./newtask_2.html"
+              style="text-decoration: none; color: black"
+            >
+              Add New task
+            </a>
+          </h3>
+        </div>
+        <a href="./add_new_3.html">
+          <div class="one common">
+            <h3 style="color: #00a5ec">Trip to Paris</h3>
 
-      <br />
-      <hr />
-      <br />
-      <input type="checkbox" name="paris" id="paris" /><label
-        for="paris"
-        style="
-          text-decoration: line-through;
-          margin-left: 20px;
-          color: #c2c2c2;
-        "
-        >Visit Supermarket</label
-      ><br />
-      <br />
+            <br />
+            <hr />
+            <br />
+            <input type="checkbox" name="paris" id="paris" /><label
+              for="paris"
+              style="
+                text-decoration: line-through;
+                margin-left: 20px;
+                color: #c2c2c2;
+              "
+              >Visit church</label
+            ><br />
+            <br />
 
-      <input type="checkbox" name="paris2" id="paris2" /><label
-        for="paris2"
-        style="margin-left: 20px"
-      >
-        Buy Vegetable</label
-      ><br />
+            <input type="checkbox" name="paris2" id="paris2" /><label
+              for="paris2"
+              style="margin-left: 20px"
+            >
+              Shopping</label
+            ><br />
+          </div>
+        </a>
+
+        <div class="two common">
+          <h3 style="color: #00a5ec">My To-Do List</h3>
+
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Visit Supermarket</label
+          ><br />
+          <br />
+
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Buy Vegetable</label
+          ><br />
+        </div>
+
+        <div class="three common">
+          <h3 style="color: #00a5ec">Movies I will Watch</h3>
+
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Stranger Things 4</label
+          ><br />
+          <br />
+
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Avenger</label
+          ><br />
+        </div>
+
+        <div class="four common">
+          <h3 style="color: #00a5ec">Daily Morning Routine..</h3>
+
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Wake up at 6</label
+          ><br />
+          <br />
+
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Sleep at 10 pm </label
+          ><br />
+        </div>
+
+        <div class="fifth common">
+          <h3 style="color: #00a5ec">Book to Read</h3>
+
+          <br />
+          <hr />
+          <br />
+          <input type="checkbox" name="paris" id="paris" checked /><label
+            for="paris"
+            style="
+              text-decoration: line-through;
+              margin-left: 20px;
+              color: #c2c2c2;
+            "
+            >Design of Everyday</label
+          ><br />
+          <br />
+
+          <input type="checkbox" name="paris2" id="paris2" /><label
+            for="paris2"
+            style="margin-left: 20px"
+          >
+            Alchemist</label
+          ><br />
+        </div>
+      </div>
     </div>
 
-    <div class="three common">
-      <h3 style="color: #00a5ec">Movies I will Watch</h3>
-
-      <br />
-      <hr />
-      <br />
-      <input type="checkbox" name="paris" id="paris" /><label
-        for="paris"
-        style="
-          text-decoration: line-through;
-          margin-left: 20px;
-          color: #c2c2c2;
-        "
-        >Stranger Things 4</label
-      ><br />
-      <br />
-
-      <input type="checkbox" name="paris2" id="paris2" /><label
-        for="paris2"
-        style="margin-left: 20px"
-      >
-        Avenger</label
-      ><br />
-    </div>
-
-    <div class="four common">
-      <h3 style="color: #00a5ec">Daily Morning Routine..</h3>
-
-      <br />
-      <hr />
-      <br />
-      <input type="checkbox" name="paris" id="paris" /><label
-        for="paris"
-        style="
-          text-decoration: line-through;
-          margin-left: 20px;
-          color: #c2c2c2;
-        "
-        >Wake up at 6</label
-      ><br />
-      <br />
-
-      <input type="checkbox" name="paris2" id="paris2" /><label
-        for="paris2"
-        style="margin-left: 20px"
-      >
-        Sleep at 10 pm </label
-      ><br />
-    </div>
-
-    <div class="fifth common">
-      <h3 style="color: #00a5ec">Book to Read</h3>
-
-      <br />
-      <hr />
-      <br />
-      <input type="checkbox" name="paris" id="paris" checked /><label
-        for="paris"
-        style="
-          text-decoration: line-through;
-          margin-left: 20px;
-          color: #c2c2c2;
-        "
-        >Design of Everyday</label
-      ><br />
-      <br />
-
-      <input type="checkbox" name="paris2" id="paris2" /><label
-        for="paris2"
-        style="margin-left: 20px"
-      >
-        Alchemist</label
-      ><br />
-    </div>
-  </div></div>
-
-
-<!-- **************************
+    <!-- **************************
 ************************ -->
 
     <div class="main">
@@ -181,14 +180,14 @@
         </div>
 
         <div>
-        <a href="./index.html">
-          <img
-            src="./close.png"
-            alt="close"
-            width="15px"
-            style="margin-top: 10px"
-          />
-        </a>
+          <a href="./index.html">
+            <img
+              src="./close.png"
+              alt="close"
+              width="15px"
+              style="margin-top: 10px"
+            />
+          </a>
         </div>
       </div>
 
@@ -196,28 +195,10 @@
         <input type="text" name="c++" id="c++" placeholder="Learn C++" />
       </div>
 
-      <div
-        class="container3"
-        style="
-          display: flex;
-          width: 90px;
-          height: 1px;
-          background-color: #00a5ec;
-          border: 2px solid #00a5ec;
-          justify-content: center;
-          padding: 10px;
-          padding-bottom: 22px;
-          border-radius: 10px;
-
-          position: absolute;
-          left: 270px;
-
-          margin-top: 20px;
-        "
-      >
-      <a href="./newtask_2.html" style="text-decoration: none;">
-        <div style="color: white;">+  Add Task</div>
-      </a>
+      <div class="container3">
+        <a href="./newtask_2.html" style="text-decoration: none">
+          <div style="color: white">+ Add Task</div>
+        </a>
       </div>
     </div>
   </body>
